<resources>
    <string name="app_name">Financial calculator</string>
    <string name="res_overflow">Result overflow!</string>
    <string name="input_overflow">Input error: overflow!</string>
    <string name="input_err">Input error!</string>
    <string name="input_empty">Input error: empty field(s)!</string>
    <string name="info_dev_name" translatable="false">Малявко Александра Витальевна</string>
    <string name="info_contact" translatable="false">3 курс, 12 группа\n2020\nmaliaukas@gmail.com</string>
    <string name="arg1_hint">Enter the first number</string>
    <string name="arg2_hint">Enter the second number</string>
    <string name="arg3_hint">Enter the third number</string>
    <string name="arg4_hint">Enter the fourth number</string>
    <string name="result_hint">The result will appear here</string>
    <string name="result_rounded_hint">The rounded result will appear here</string>
    <string name="btn_add_text" translatable="false">+</string>
    <string name="btn_sub_text" translatable="false">-</string>
    <string name="btn_mul_text" translatable="false">*</string>
    <string name="btn_div_text" translatable="false">/</string>
    <string name="err_div_by_zero">Division by zero!</string>
    <string name="btn_res_text" translatable="false">=</string>
    <string name="edt_default" translatable="false">0</string>
    <string name="round_math">Mathematical rounding</string>
    <string name="round_half_even">Half-to-even rounding</string>
    <string name="round_down">Down rounding</string>
</resources>